# BridgeRestAPI

./: CMakeLists.txt  README.md
deviceWithPositionAPI/: CMakeLists.txt  device.cpp  device.h  deviceWithPosition.cpp  deviceWithPosition.h  deviceWithPositionService.cpp
